--- a/layouts/_partials/custom/head-end.html
+++ b/layouts/_partials/custom/head-end.html
@@ -1,8 +1,7 @@
-{{- with .Params.width -}}
+{{/*  {{- with .Params.width -}}
 <style>
 :root {
-  /* Hextra defaults: 80rem (normal), 90rem (wide), 100% (full) */
   --hextra-max-page-width: {{ cond (eq . "wide") "90rem" (cond (eq . "full") "100%" "80rem") }};
 }
 </style>
-{{- end -}}
+{{- end -}}  */}}
