--- a/layouts/_shortcodes/widget-product.html
+++ b/layouts/_shortcodes/widget-product.html
@@ -20,7 +20,7 @@
     </a>
     {{ end }}
     {{ with $prodLink }}
-        {{ template "_shortcodes/prod-button.html" . }}
+        {{ partial "prod-button.html" . }}
     {{ end }}
     </div>
 </div>
